name:                HaskellTorb
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/HaskellTorb#readme
license:             BSD3
license-file:        LICENSE
author:              Zyphicx
maintainer:          example@example.com
copyright:           2018 Zyphicx
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable HaskellTorb
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Animation
               ,       Backend
               ,       Constants
               ,       Game
               ,       Rendering
               ,       Types
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
               ,       gloss
               ,       GLFW-b
               ,       gloss-rendering
               ,       time
               ,       random
--               ,       ALUT